Update some intro information

--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
     </div>
 </nav>
 
-<div class="alert alert-primary alert-dismissible fade show announcement-top-bar" role="alert">
+<!-- <div class="alert alert-primary alert-dismissible fade show announcement-top-bar" role="alert">
     <p class="d-none d-md-block">To check out my writings, <a href="https://jashish.com.np/blog" target="_blank">click here!</a></p>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
     </button>
-</div>
+</div> -->
 
 <div class="container-fluid p-0">
 
@@ -146,7 +146,10 @@
                 <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
             </div>
             <p class="mb-5">
-                I am a first-year Ph.D. student in Computer Science at UT Arlington. I currently work under Prof. Makedon in vision projects with machine learning that involve human activity recognition, video analysis, etc to automate systems that assess people with different cognitive abilities.
+                I am a second-year Ph.D. student in Computer Science at UT Arlington. I currently work under the supervision of Prof. Makedon in vision projects with machine learning that involve human activity recognition, video analysis, etc to automate systems that assess people with different cognitive abilities. I am also currently working on a project that deals with brain imaging (fMRI) for fatigue prediction in TBI patients. 
+            </p>
+            <p>
+                I also get excited by the recent state-of-the-art self-supervised learning methods that are taking us to a world where data for machine learning would require almost no annotations.
             </p>
 <!--             <p> 
                 I believe in blending existence with innovation with vitality to impel striking results. It might be manipulating a medical x-ray image that enhances someone's well being or programming efficient robots to accomplish application-explicit tasks such as self-governing transportation, assisting medical surgery; these domains excite me as a person.
