Add new publication - self-supervised gans

--- a/index.html
+++ b/index.html
@@ -801,6 +801,14 @@
 
                 <li>
                     <i class="fa-li fa fa-book"></i>
+                    Zaki Zadeh, M., Babu, A.R., <b>Jaiswal, A.</b> and Makedon, F., 2020. Self-Supervised Human Activity Recognition by Augmenting Generative Adversarial Networks. <i>arXiv e-prints</i>, pp.arXiv-2008.
+                    <a href="https://arxiv.org/abs/2008.11755" target="_blank">
+                        [pdf]
+                    </a>
+                </li>
+
+                <li>
+                    <i class="fa-li fa fa-book"></i>
                     Farahanipad, F.*, Nambiappan, H.R.*, <b>Jaiswal, A.</b>, Kyrarini, M. and Makedon, F., 2020, June. HAND-REHA: Dynamic Hand Gesture Recognition for Game-based Wrist Rehabilitation. In <i>Proceedings of the 13th ACM International Conference on PErvasive Technologies Related to Assistive Environments</i> (pp. 1-9). *Equal Contribution
                     <a href="https://dl.acm.org/doi/10.1145/3389189.3392608" target="_blank">
                         [pdf]
