--- a/index.html
+++ b/index.html
@@ -793,6 +793,13 @@
             <ul class="fa-ul mb-0">
                 <li>
                     <i class="fa-li fa fa-book"></i>
+                    <b>Jaiswal, A.</b>, Babu, A.R., Zadeh, M.Z., Banerjee, D., and Makedon, F., 2020. A Survey on Contrastive Self-supervised Learning. <i>MDPI Technologies 2020</i> (submitted)
+                    <!-- <a href="" target="_blank">
+                        [pdf]
+                    </a> -->
+                </li>
+                <li>
+                    <i class="fa-li fa fa-book"></i>
                     Babu, A.R., Zadeh, M.Z., <b>Jaiswal, A.</b>, Lueckenhoff, A., Kyrarini, M., and Makedon, F., 2020. A Multi-modal System to Assess Cognition in Children from their Physical Movements. In <i>Proceedings of the 2020 International Conference on Multimodal Interaction (ICMI '20). ACM.</i> (accepted)
                     <a href="https://dl.acm.org/doi/abs/10.1145/3382507.3418829" target="_blank">
                         [pdf]
