Add link to survey paper

--- a/index.html
+++ b/index.html
@@ -794,9 +794,9 @@
                 <li>
                     <i class="fa-li fa fa-book"></i>
                     <b>Jaiswal, A.</b>, Babu, A.R., Zadeh, M.Z., Banerjee, D., and Makedon, F., 2020. A Survey on Contrastive Self-supervised Learning. <i>MDPI Technologies 2020</i> (submitted)
-                    <!-- <a href="" target="_blank">
+                    <a href="https://arxiv.org/abs/2011.00362" target="_blank">
                         [pdf]
-                    </a> -->
+                    </a>
                 </li>
                 <li>
                     <i class="fa-li fa fa-book"></i>
