Update details on the website

--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
                 <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
             </div>
             <p class="mb-5">
-                I am a second-year Ph.D. student in Computer Science at UT Arlington. I currently work under the supervision of Prof. Makedon in vision projects with machine learning that involve human activity recognition, video analysis, etc to automate systems that assess people with different cognitive abilities. I am also currently working on a project that deals with brain imaging (fMRI) for fatigue prediction in TBI patients. 
+                I am a second-year Ph.D. student in Computer Science at UT Arlington. I currently work under the supervision of Prof. Makedon in vision projects with machine learning that involve human activity recognition, video analysis, etc to automate systems that assess people with different cognitive abilities. I am also currently working on a project that deals with brain imaging (fMRI) for fatigue prediction in Traumatic Brain Injury (TBI) patients. 
             </p>
             <p>
-                I also get excited by the recent state-of-the-art self-supervised learning methods that are taking us to a world where data for machine learning would require almost no annotations.
+                I also get excited by the recent state-of-the-art self-supervised learning methods that are taking us to a world where data itself provides supervision.
             </p>
 <!--             <p> 
                 I believe in blending existence with innovation with vitality to impel striking results. It might be manipulating a medical x-ray image that enhances someone's well being or programming efficient robots to accomplish application-explicit tasks such as self-governing transportation, assisting medical surgery; these domains excite me as a person.
@@ -199,10 +199,12 @@
 
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
-                    <h3 class="mb-0">Graduate Teaching Assistant</h3>
+                    <h3 class="mb-0">Graduate Teaching/Research Assistant</h3>
                     <div class="subheading mb-3">Computer Science & Engineering, UT Arlington</div>
                     <ul>
-                        <li>Teaching Assistant for the course CSE 1320 - Intermediate Programming with C</li>
+                        <li>Teaching Assistant for programming courses in C and JAVA</li>
+                        <li>Research in computer vision and machine learning for improving human-computer interaction 
+                            <a href="http://heracleia.uta.edu" target="_blank">(Heracleia HCC Lab)</a></li>
                     </ul>
                 </div>
                 <div class="resume-date text-md-right">
@@ -216,7 +218,7 @@
                     <div class="subheading mb-3">SocialEyes NP</div>
                     <ul>
                         <li>Researched & implemented computer vision techniques with transfer learning to detect diseases from retinal images targetting macular degeneration</li>
-                        <li>Built a risk analysis matrix dashboard to visualize patient's biometric information</li>
+                        <li>Built a risk analysis matrix dashboard to visualize patient's health information</li>
                     </ul>
                 </div>
                 <div class="resume-date text-md-right">
@@ -310,7 +312,7 @@
                 <div class="resume-content mr-auto">
                     <h3 class="mb-0">University of Texas at Arlington</h3>
                     <div class="subheading mb-3">Ph.D. in Computer Science</div>
-                    <div>Computer Vision, Human Computer Interaction, Robotics, AI/ML</div>
+                    <div>Computer Vision, Machine Learning, Human Computer Interaction</div>
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">August 2019 - August 2024</span>
@@ -321,7 +323,7 @@
                 <div class="resume-content mr-auto">
                     <h3 class="mb-0">Kathmandu Engineering College</h3>
                     <div class="subheading mb-3">Bachelor of Electronics & Communication Engineering</div>
-                    <div>Embedded Systems, Robotics and Computer Science</div>
+                    <div>Embedded Systems, Robotics, Computer Science</div>
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">November 2014 - October 2018</span>
@@ -351,10 +353,13 @@
                     <i class="devicons devicons-python"></i>
                 </li>
                 <li class="list-inline-item">
-                    <i class="devicons devicons-django"></i>
+                    <i class="devicons devicons-terminal"></i>
                 </li>
                 <li class="list-inline-item">
                     <i class="devicons devicons-git"></i>
+                </li>
+                <li class="list-inline-item">
+                    <i class="devicons devicons-django"></i>
                 </li>
                 <li class="list-inline-item">
                     <i class="devicons devicons-github_full"></i>
@@ -397,9 +402,6 @@
                 </li>
                 <li class="list-inline-item">
                     <i class="devicons devicons-intellij"></i>
-                </li>
-                <li class="list-inline-item">
-                    <i class="devicons devicons-terminal"></i>
                 </li>
             </ul>
 
