Update skills and interests

--- a/index.html
+++ b/index.html
@@ -353,22 +353,37 @@
                     <i class="devicons devicons-python"></i>
                 </li>
                 <li class="list-inline-item">
-                    <i class="devicons devicons-terminal"></i>
+                    <span class="iconify" data-icon="cib:pytorch" data-inline="false"></span>
+                </li>
+                <li class="list-inline-item">
+                    <span class="iconify" data-icon="file-icons:numpy" data-inline="false"></span>
+                </li>
+                <li class="list-inline-item">
+                    <span class="iconify" data-icon="simple-icons:pandas" data-inline="false"></span>
+                </li>
+                <li class="list-inline-item">
+                    <span class="iconify" data-icon="simple-icons:scikit-learn" data-inline="false"></span>
+                </li>
+                <li class="list-inline-item">
+                    <span class="iconify" data-icon="cib:keras" data-inline="false"></span>
                 </li>
                 <li class="list-inline-item">
                     <i class="devicons devicons-git"></i>
+                </li>
+                <li class="list-inline-item">
+                    <i class="devicons devicons-mysql"></i>
+                </li>
+                <li class="list-inline-item">
+                    <i class="devicons devicons-linux"></i>
+                </li>
+                <li class="list-inline-item">
+                    <i class="devicons devicons-terminal"></i>
                 </li>
                 <li class="list-inline-item">
                     <i class="devicons devicons-django"></i>
                 </li>
                 <li class="list-inline-item">
                     <i class="devicons devicons-github_full"></i>
-                </li>
-                <li class="list-inline-item">
-                    <i class="devicons devicons-bitbucket"></i>
-                </li>
-                <li class="list-inline-item">
-                    <i class="devicons devicons-mysql"></i>
                 </li>
                 <li class="list-inline-item">
                     <i class="devicons devicons-aws"></i>
@@ -395,9 +410,6 @@
                     <i class="devicons devicons-bootstrap"></i>
                 </li>
                 <li class="list-inline-item">
-                    <i class="devicons devicons-linux"></i>
-                </li>
-                <li class="list-inline-item">
                     <i class="devicons devicons-nginx"></i>
                 </li>
                 <li class="list-inline-item">
@@ -409,15 +421,15 @@
             <ul class="fa-ul mb-0">
                 <li>
                     <i class="fa-li fa fa-check"></i>
-                    Artificial Intelligence, Machine Learning & Deep Learning
+                    Machine Learning, Computer Vision
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
-                    Python, Django
+                    Python, Pytorch, Numpy, Pandas, Matplotlib, Scikit-learn, Keras (TensorFlow)
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
-                    Computer Vision
+                    Git, Github, Bitbucket, Gitlab
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
@@ -433,11 +445,11 @@
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
-                    Linux, Nginx
+                    Bash, Zsh, Linux, Nginx
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
-                    REST API & Services
+                    REST API & Services (Django-REST, Flask)
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
@@ -460,7 +472,7 @@
             <h2 class="mb-5">Interests</h2>
             <ul class="fa-ul">
                 <li><i class="fa-li fa fa-check-square"></i>Computer Vision & Machine Learning</li>
-                <li><i class="fa-li fa fa-check-square"></i>Robotics</li>
+                <li><i class="fa-li fa fa-check-square"></i>Self-supervised Learning / Semi-supervised Learning</li>
                 <li><i class="fa-li fa fa-check-square"></i>Internet of Things (IoT)</li>
                 <li><i class="fa-li fa fa-check-square"></i>Web Services</li>
                 <li><i class="fa-li fa fa-check-square"></i>Cricket</li>
@@ -834,6 +846,9 @@
 
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Iconify script -->
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 
     <!-- Custom scripts for this template -->
     <script src="js/resume.min.js"></script>
