Update education date:

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     <div>Computer Vision, Machine Learning, Human Computer Interaction</div>
                 </div>
                 <div class="resume-date text-md-right">
-                    <span class="text-primary">August 2019 - August 2024</span>
+                    <span class="text-primary">August 2019 - April 2023 (Expected)</span>
                 </div>
             </div>
 
