--- a/index.html
+++ b/index.html
@@ -187,6 +187,14 @@
                 </span>
                     </a>
                 </li>
+                <li class="list-inline-item">
+                    <a href="https://scholar.google.com/citations?user=sCo50tYAAAAJ&hl=en" target="_blank">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-book fa-stack-1x fa-inverse"></i>
+                </span>
+                    </a>
+                </li>
             </ul>
             <br><br>
             <a href="/files/Ashish_Jaiswal_Resume.pdf" download>Download my Resume</a>
