Update publications list

--- a/index.html
+++ b/index.html
@@ -934,8 +934,8 @@
             <ul class="fa-ul mb-0">
                 <li>
                     <i class="fa-li fa fa-book"></i>
-                    <b>Jaiswal, A.</b>, Babu, A.R., Zadeh, M.Z., Banerjee, D., and Makedon, F., 2020. A Survey on Contrastive Self-supervised Learning. <i>MDPI Technologies 2020</i> (submitted)
-                    <a href="https://arxiv.org/abs/2011.00362" target="_blank">
+                    <b>Jaiswal, A.</b>, Babu, A.R., Zadeh, M.Z., Banerjee, D., and Makedon, F., 2020. A Survey on Contrastive Self-supervised Learning. <i>Technologies, 9(1), p.2.</i>
+                    <a href="https://www.mdpi.com/2227-7080/9/1/2" target="_blank">
                         [pdf]
                     </a>
                 </li>
@@ -949,8 +949,24 @@
 
                 <li>
                     <i class="fa-li fa fa-book"></i>
-                    Zaki Zadeh, M., Babu, A.R., <b>Jaiswal, A.</b> and Makedon, F., 2020. Self-Supervised Human Activity Recognition by Augmenting Generative Adversarial Networks. <i>arXiv e-prints</i>, pp.arXiv-2008.
+                    Zaki Zadeh, M., Babu, A.R., <b>Jaiswal, A.</b> and Makedon, F., 2020. Self-Supervised Human Activity Recognition by Augmenting Generative Adversarial Networks. <i>arXiv e-prints, pp.arXiv-2008</i>.
                     <a href="https://arxiv.org/abs/2008.11755" target="_blank">
+                        [pdf]
+                    </a>
+                </li>
+
+                <li>
+                    <i class="fa-li fa fa-book"></i>
+                    Doolani, S., Wessels, C., Kanal, V., Sevastopoulos, C., <b>Jaiswal, A.</b>, Nambiappan, H. and Makedon, F., 2020. A Review of Extended Reality (XR) Technologies for Manufacturing Training. <i>Technologies, 8(4), p.77.</i>
+                    <a href="https://www.mdpi.com/2227-7080/8/4/77" target="_blank">
+                        [pdf]
+                    </a>
+                </li>
+
+                <li>
+                    <i class="fa-li fa fa-book"></i>
+                    Zadeh, M.Z., Babu, A.R., <b>Jaiswal, A.</b>, Kyrarini, M. and Makedon, F., 2020. Automated system to measure Tandem Gait to assess executive functions in children. <i>arXiv preprint arXiv:2012.08662.</i>
+                    <a href="https://arxiv.org/abs/2012.08662" target="_blank">
                         [pdf]
                     </a>
                 </li>
