--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
                     human activity recognition, video analysis, etc to automate systems that assess people with
                     different physical and cognitive abilities. Recently, I have been working on a project that deals
                     with brain imaging (fMRI) to understand cognitive fatigue in people with Traumatic Brain Injury
-                    (TBI). Other than that, I am currently investing my time on learning state-of-the-art self-supervised learning techinques and implementing them to improve the performance of my deep learning models.
+                    (TBI). Other than that, I am currently investing my time on learning state-of-the-art
+                    self-supervised learning techinques and implementing them to improve the performance of my deep
+                    learning models.
                 </p>
 
                 <ul class="list-inline list-social-icons mb-0">
@@ -210,7 +212,7 @@
                         <h3 class="mb-0">Graduate Teaching/Research Assistant</h3>
                         <div class="subheading mb-3">Computer Science & Engineering, UT Arlington</div>
                         <ul>
-                            <li>Teaching Assistant for programming courses in C and JAVA</li>
+                            <li>Teaching Assistant for programming courses in C, JAVA, and Raspberry Pi</li>
                             <li>Research in computer vision and machine learning for improving human-computer
                                 interaction
                                 <a href="http://heracleia.uta.edu" target="_blank">(Heracleia HCC Lab)</a>
@@ -438,7 +440,7 @@
                 <ul class="fa-ul mb-0">
                     <li>
                         <i class="fa-li fa fa-check"></i>
-                        Machine Learning, Computer Vision
+                        Machine Learning, Computer Vision, Self-supervised Learning
                     </li>
                     <li>
                         <i class="fa-li fa fa-check"></i>
@@ -516,6 +518,10 @@
             <div class="my-auto">
                 <h2 class="mb-5">Awards &amp; Certifications</h2>
                 <ul class="fa-ul mb-0">
+                    <li>
+                        <i class="fa-li fa fa-trophy text-warning"></i>
+                        <b>Doctoral Consortium (DC) Winner</b> - PETRA 2021 Conference, Corfu, Greece
+                    </li>
                     <li>
                         <i class="fa-li fa fa-trophy text-warning"></i>
                         <a href="https://uta.engineering/innovationday/project.php?p=2&h=e44283fa45abdc0bc57e28b40ff3a7e9"
@@ -615,7 +621,7 @@
                                         <button class="btn btn-link collapsed collapse-header" data-toggle="collapse"
                                             data-target="#fmri_project" aria-expanded="false"
                                             aria-controls="fmri_project">
-                                            Fatigue Prediction from fMRI scans
+                                            Understanding Cognitive Fatigue from fMRI scans
                                         </button>
                                     </h5>
                                 </div>
