--- a/index.html
+++ b/index.html
@@ -973,8 +973,18 @@
                 <ul class="fa-ul mb-0">
                     <li>
                         <i class="fa-li fa fa-book"></i>
-                        <b>Jaiswal, A.</b>, Babu, A.R., Zadeh, M.Z., Banerjee, D., and Makedon, F., 2020. A Survey on
-                        Contrastive Self-supervised Learning. <i>Technologies, 9(1), p.2.</i>
+                        <b>Jaiswal, A.</b>, Babu, A.R., Zadeh, M.Z., Makedon, F. and Wylie, G., 2021. <text
+                            style="color:#bd2130">Understanding Cognitive Fatigue from fMRI Scans with Self-supervised
+                            Learning.</text> <i>arXiv preprint arXiv:2106.15009.</i>
+                        <a href="https://arxiv.org/pdf/2106.15009.pdf" target="_blank">
+                            [pdf]
+                        </a>
+                    </li>
+                    <li>
+                        <i class="fa-li fa fa-book"></i>
+                        <b>Jaiswal, A.</b>, Babu, A.R., Zadeh, M.Z., Banerjee, D., and Makedon, F., 2020. <text
+                            style="color:#bd2130">A Survey on
+                            Contrastive Self-supervised Learning.</text> <i>Technologies, 9(1), p.2.</i>
                         <a href="https://www.mdpi.com/2227-7080/9/1/2" target="_blank">
                             [pdf]
                         </a>
@@ -982,7 +992,8 @@
                     <li>
                         <i class="fa-li fa fa-book"></i>
                         Babu, A.R., Zadeh, M.Z., <b>Jaiswal, A.</b>, Lueckenhoff, A., Kyrarini, M., and Makedon, F.,
-                        2020. A Multi-modal System to Assess Cognition in Children from their Physical Movements. In
+                        2020. <text style="color:#bd2130">A Multi-modal System to Assess Cognition in Children from
+                            their Physical Movements.</text> In
                         <i>Proceedings of the 2020 International Conference on Multimodal Interaction (ICMI '20).
                             ACM.</i> (accepted)
                         <a href="https://dl.acm.org/doi/abs/10.1145/3382507.3418829" target="_blank">
@@ -992,8 +1003,10 @@
 
                     <li>
                         <i class="fa-li fa fa-book"></i>
-                        Zaki Zadeh, M., Babu, A.R., <b>Jaiswal, A.</b> and Makedon, F., 2020. Self-Supervised Human
-                        Activity Recognition by Augmenting Generative Adversarial Networks. <i>arXiv e-prints,
+                        Zaki Zadeh, M., Babu, A.R., <b>Jaiswal, A.</b> and Makedon, F., 2020. <text
+                            style="color:#bd2130">Self-Supervised Human
+                            Activity Recognition by Augmenting Generative Adversarial Networks.</text> <i>arXiv
+                            e-prints,
                             pp.arXiv-2008</i>.
                         <a href="https://arxiv.org/abs/2008.11755" target="_blank">
                             [pdf]
@@ -1003,7 +1016,8 @@
                     <li>
                         <i class="fa-li fa fa-book"></i>
                         Doolani, S., Wessels, C., Kanal, V., Sevastopoulos, C., <b>Jaiswal, A.</b>, Nambiappan, H. and
-                        Makedon, F., 2020. A Review of Extended Reality (XR) Technologies for Manufacturing Training.
+                        Makedon, F., 2020. <text style="color:#bd2130">A Review of Extended Reality (XR) Technologies
+                            for Manufacturing Training.</text>
                         <i>Technologies, 8(4), p.77.</i>
                         <a href="https://www.mdpi.com/2227-7080/8/4/77" target="_blank">
                             [pdf]
@@ -1012,8 +1026,10 @@
 
                     <li>
                         <i class="fa-li fa fa-book"></i>
-                        Zadeh, M.Z., Babu, A.R., <b>Jaiswal, A.</b>, Kyrarini, M. and Makedon, F., 2020. Automated
-                        system to measure Tandem Gait to assess executive functions in children. <i>arXiv preprint
+                        Zadeh, M.Z., Babu, A.R., <b>Jaiswal, A.</b>, Kyrarini, M. and Makedon, F., 2020. <text
+                            style="color:#bd2130">Automated
+                            system to measure Tandem Gait to assess executive functions in children.</text> <i>arXiv
+                            preprint
                             arXiv:2012.08662.</i>
                         <a href="https://arxiv.org/abs/2012.08662" target="_blank">
                             [pdf]
@@ -1023,7 +1039,8 @@
                     <li>
                         <i class="fa-li fa fa-book"></i>
                         Farahanipad, F.*, Nambiappan, H.R.*, <b>Jaiswal, A.</b>, Kyrarini, M. and Makedon, F., 2020,
-                        June. HAND-REHA: Dynamic Hand Gesture Recognition for Game-based Wrist Rehabilitation. In
+                        June. <text style="color:#bd2130">HAND-REHA: Dynamic Hand Gesture Recognition for Game-based
+                            Wrist Rehabilitation.</text> In
                         <i>Proceedings of the 13th ACM International Conference on PErvasive Technologies Related to
                             Assistive Environments</i> (pp. 1-9). *Equal Contribution
                         <a href="https://dl.acm.org/doi/10.1145/3389189.3392608" target="_blank">
