--- a/index.html
+++ b/index.html
@@ -983,10 +983,32 @@
 
                     <li>
                         <i class="fa-li fa fa-book"></i>
-                        <b>Jaiswal, A.</b>, Babu, A.R., Zadeh, M.Z., Banerjee, D., and Makedon, F., 2020. <text
+                        <b>Jaiswal, A.</b>, Babu, A.R., Zadeh, M.Z., Banerjee, D., and Makedon, F., 2021. <text
                             style="color:#bd2130">A Survey on
                             Contrastive Self-supervised Learning.</text> <i>Technologies, 9(1), p.2.</i>
                         <a href="https://www.mdpi.com/2227-7080/9/1/2" target="_blank">
+                            [pdf]
+                        </a>
+                    </li><br>
+
+                    <li>
+                        <i class="fa-li fa fa-book"></i>
+                        Zaki Zadeh, M., Babu, A.R., <b>Jaiswal, A.</b> and Makedon, F., 2021. <text
+                            style="color:#bd2130">Self-Supervised Human
+                            Activity Recognition by Augmenting Generative Adversarial Networks.</text> In <i>The 14th
+                            PErvasive Technologies Related to Assistive Environments Conference,</i>(pp. 171-176).
+                        <a href="https://dl.acm.org/doi/abs/10.1145/3453892.3453893" target="_blank">
+                            [pdf]
+                        </a>
+                    </li><br>
+
+                    <li>
+                        <i class="fa-li fa fa-book"></i>
+                        Zadeh, M.Z., Babu, A.R., <b>Jaiswal, A.</b>, Kyrarini, M. and Makedon, F., 2021. <text
+                            style="color:#bd2130">Automated
+                            system to measure Tandem Gait to assess executive functions in children.</text> In <i>The
+                            14th PErvasive Technologies Related to Assistive Environments Conference </i>(pp. 167-170).
+                        <a href="https://dl.acm.org/doi/abs/10.1145/3453892.3453999" target="_blank">
                             [pdf]
                         </a>
                     </li><br>
@@ -1005,35 +1027,11 @@
 
                     <li>
                         <i class="fa-li fa fa-book"></i>
-                        Zaki Zadeh, M., Babu, A.R., <b>Jaiswal, A.</b> and Makedon, F., 2020. <text
-                            style="color:#bd2130">Self-Supervised Human
-                            Activity Recognition by Augmenting Generative Adversarial Networks.</text> <i>arXiv
-                            e-prints,
-                            pp.arXiv-2008</i>.
-                        <a href="https://arxiv.org/abs/2008.11755" target="_blank">
-                            [pdf]
-                        </a>
-                    </li><br>
-
-                    <li>
-                        <i class="fa-li fa fa-book"></i>
                         Doolani, S., Wessels, C., Kanal, V., Sevastopoulos, C., <b>Jaiswal, A.</b>, Nambiappan, H. and
                         Makedon, F., 2020. <text style="color:#bd2130">A Review of Extended Reality (XR) Technologies
                             for Manufacturing Training.</text>
                         <i>Technologies, 8(4), p.77.</i>
                         <a href="https://www.mdpi.com/2227-7080/8/4/77" target="_blank">
-                            [pdf]
-                        </a>
-                    </li><br>
-
-                    <li>
-                        <i class="fa-li fa fa-book"></i>
-                        Zadeh, M.Z., Babu, A.R., <b>Jaiswal, A.</b>, Kyrarini, M. and Makedon, F., 2020. <text
-                            style="color:#bd2130">Automated
-                            system to measure Tandem Gait to assess executive functions in children.</text> <i>arXiv
-                            preprint
-                            arXiv:2012.08662.</i>
-                        <a href="https://arxiv.org/abs/2012.08662" target="_blank">
                             [pdf]
                         </a>
                     </li><br>
