Some grammatical changs to the introduction

--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
                 <p class="mb-5">
                     I am a second-year Ph.D. student in Computer Science at UT Arlington. I currently work under the
                     supervision of Prof. Fillia Makedon in computer vision projects with machine learning that involve
-                    human activity recognition, video analysis, etc to automate systems that assess people with
-                    different physical and cognitive abilities. Recently, I have been working on a project that deals
+                    human activity recognition, video analysis, etc., to automate systems that assess people with
+                    different physical and cognitive abilities. In addition, I recently worked on a project that deals
                     with brain imaging (fMRI) to understand cognitive fatigue in people with Traumatic Brain Injury
-                    (TBI). Other than that, I am currently investing my time on learning state-of-the-art
-                    self-supervised learning techinques and implementing them to improve the performance of my deep
+                    (TBI). Other than that, I am currently investing my time in learning state-of-the-art
+                    self-supervised learning techniques and implementing them to improve the performance of my deep
                     learning models.
                 </p>
 
